--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Khushi| Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src=" &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
