--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Khushi Resume</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+    <h1>My Resume</h1>
+    <iframe src="https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf" width="100%" height="800px"></iframe>
+</body>
 </html>
