--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>My Resume</h1>
-    <iframe src="https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf" width="100%" height="800px"></iframe>
+    <iframe src="https://docs.google.com/viewer?url=https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf" width="100%" height="800px"></iframe>
 </body>
 </html>
