--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
-</head>
-<body>
-    <h1>My Resume</h1>
-    <iframe src="https://docs.google.com/viewer?url=https://github.com/khushigupttaa04/resume/blob/main/KhushiGupta_2024_Resume.pdf" width="100%" height="800px"></iframe>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Resume</title>
+    </head>
+    <body>
+        <iframe
+            src="https://github.com/khushigupttaa04/resume/blob/6e973d0eecd3bfe59e152ede5bbd1123db3f91b6/KhushiGupta_2024_Resume.pdf"
+            width="100%"
+            height="1080"
+            allow="autoplay"
+        ></iframe>
+    </body>
 </html>
